tests/NormalTests/paczka1/small_fuzzy/90738677.err
Error in line 6: cKmnwk S518 -4,5
Error in line 3: cKmnwk S518 58,3
